crates/core/tests/snapshots/setting_validate_test__setting_validate__unnamed_struct__supports_nested_collections.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    if let Some(setting) = &self.0 {
        validate.check("0", setting, self, |v, d, c, f| func_ref(v, d, c, f));
        validate.nested_list("0", setting.iter().map(Some));
    }
    if let Some(setting) = &self.1 {
        validate.check("1", setting, self, |v, d, c, f| func_ref(v, d, c, f));
        validate.nested_map("1", setting.iter().map(|(key, value)| (key, Some(value))));
    }
    if let Some(setting) = &self.2 {
        validate.check("2", setting, self, |v, d, c, f| func_ref(v, d, c, f));
        validate.nested_list("2", setting.iter().map(Some));
    }
    if let Some(setting) = &self.3 {
        validate.nested_list("3", setting.iter().map(Some));
    }
    if let Some(setting) = &self.4 {
        validate.nested_map("4", setting.iter().map(|(key, value)| (key, Some(value))));
    }
    if let Some(setting) = &self.5 {
        validate.nested_list("5", setting.iter().map(Some));
    }
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
