crates/core/tests/snapshots/setting_validate_test__setting_validate__unnamed_struct__supports_standard.snap
---
source: crates/core/tests/setting_validate_test.rs
expression: pretty(container.impl_partial_validate())
---
fn validate_with_path(
    &self,
    context: &Self::Context,
    finalizing: bool,
    path: schematic::Path,
) -> std::result::Result<(), Vec<schematic::ValidateError>> {
    use schematic::internal::*;
    let mut validate = ValidateManager::new(context, finalizing, path);
    if let Some(setting) = &self.0 {
        validate.check("0", setting, self, Box::new(func_ref));
    }
    if let Some(setting) = &self.1 {
        validate.check("1", setting, self, Box::new(func_ref));
    }
    if let Some(setting) = &self.2 {
        validate.check("2", setting, self, Box::new(func_ref));
    }
    if let Some(setting) = &self.3 {
        validate.check("3", setting, self, Box::new(func_ref));
    }
    if let Some(setting) = &self.4 {
        validate.check("4", setting, self, Box::new(func_ref));
    }
    if !validate.errors.is_empty() {
        return Err(validate.errors);
    }
    Ok(())
}
